[package]
name = "BackEnd"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
argon2 = { version = "0.4", features = ["password-hash"] }
rand_core = "0.6"
serde_json = "1.0"
rand = "0.8"
hex = "0.4"
mongodb = "2.8"
tokio = { version = "1", features = ["full"] }
actix-cors = "0.7"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
